--- a/assets/pages/recursos.html
+++ b/assets/pages/recursos.html
@@ -22,8 +22,8 @@
         <ul class="navul">
             <li><a href="../../index.html">Inicio</a></li>
             <li><a href="./contacto.html">Contacto</a></li>
-            <li><a class="regis" href="./registro.html" target="_blank">Registrarse</a></li>
-            <li><a class="loguin" href="./logueo.html" target="_blank">Iniciar Sesion</a></li>
+            <li><a class="regis" href="./registro.html" target="_blank">Ingresar</a></li>
+            <!-- <li><a class="loguin" href="./logueo.html" target="_blank">Iniciar Sesion</a></li> -->
         </ul>
        </nav>
    </header>
